chamber/styles/styles.css
:root {
    --primary-color: #2E86AB;
    --secondary-color: #F5B041;
    --bg-color: #F8F9F9;
    --text-color: #2C3E50;
    --font: 'Open Sans', Arial, sans-serif;
}

*{
    padding: 0;
    margin: 0;
    box-sizing: border-box;
}

body{
    background-color: var(--bg-color);
    color: var(--text-color);
    font-family: var(--font);
    display: grid;
    gap: 1rem;
}

header{
    display: grid;
    grid-template-columns: 48px 1fr;
    padding: 3rem;
}

h1, h2, h3 {
    color: var(--primary-color);
}

main{
    display: flex;
    flex-direction: column;
    gap: 1rem;
    margin-left: 1rem;
    margin-right: 1rem;
}

section{
    display: flex;
    flex-direction: column;
    justify-content: center;
    text-align: center;
    margin: 0 auto;
    border: 1px solid black;
    border-radius: .5rem;
    background-color: rgba(0, 0, 0, 0.1);
    max-width: 900px;
    padding: 1rem;
    width: 100%;
    gap: 1rem;
    word-break: break-all;
}

.directory{
    display: grid;
    grid-template-columns: repeat(auto-fit, minmax( 350px, 1fr));
    gap: 1rem;
}

.card{
    width: 100%;
}

.menu-items{
    display: flex;
    gap: 1rem;
    list-style: none;
    justify-content: right;
}

.menu-items a{
    color: black;
    cursor: pointer;
    text-decoration: none;
    padding: 1rem;
    min-width: 48px;
    border: 1px solid black;
    border-radius: .5rem;
}

a{
    color: var(--secondary-color);
    text-decoration: none;
    font-size: 1.5rem;
}

.view-switch{
    display: flex;
    gap: .5rem;
    justify-content: center;
    padding: .5rem;
}

.view-switch button{
    padding: .5rem;
    border-radius: .5rem;
}

.flex-parent{
    display: flex;
    justify-content: center;
}

.address{
    position: relative;
    display: inline-block;
}

.address::after{
    content: "📍";
    position: absolute;
    right: -15px;
    top: 0;
}

.ch-address{
    text-align: left;
}

footer{
    display: grid;
    grid-template-columns: 1fr 1fr 1fr;
    border-top: dotted 1px black;
}

footer section{
    background-color: transparent;
    border: none;
    align-items: center;
    max-width: fit-content;
    gap: 0;
}

